tests/src/frontend/typechecking/invalid/deferred_construct_1.sk
base class B final (x: Int, deferred y: this::T) {
  type T;
}

fun no(c: Concrete<B>): B {
  c(0, 100)
}
